@@ -1,3 +1,8 @@
+2011-12-15  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/22_locale/num_put/put/char/9780-2.cc: Add test for "C"
+	locale, add sanity checks in case of grouping.
+
 2012-03-01  Release Manager
 
 	* GCC 4.6.3 released.
